fix z-index for menus and overlay in case of a lot of widget used

--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -5,7 +5,7 @@
 	height: 26em;
 	overflow: hidden;
 	position: fixed;
-	z-index: 1000;
+	z-index: 2000;
 	bottom: -13em;
 	right: -13em;
 	border-radius: 50%;
@@ -39,7 +39,7 @@
 	bottom: -5em;
 	border-radius: 50%;
 	cursor: pointer;
-	z-index: 1005;
+	z-index: 2005;
 }
 
 #main-menu .cnbutton:hover,
